--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,4 +2,5 @@ deploy.ant.properties.file=C:\\Users\\ptd\\AppData\\Roaming\\NetBeans\\8.2\\tomc
 file.reference.sqljdbc4-2.0.jar=C:\\Users\\ptd\\Downloads\\sqljdbc4-2.0.jar
 j2ee.server.home=C:/Program Files/apache-tomcat-8.5.90
 j2ee.server.instance=tomcat80:home=C:\\Program Files\\apache-tomcat-8.5.90
+selected.browser=Chrome
 user.properties.file=C:\\Users\\ptd\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
