--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.mail-1.4.7.jar=C:\\Users\\ptd\\Downloads\\mail-1.4.7.jar
 file.reference.sqljdbc4-2.0.jar=C:\\Program Files\\apache-tomcat-8.0.24\\lib\\sqljdbc4-2.0.jar
 file.reference.sqljdbc4-2.0.jar-1=C:\\Users\\ptd\\Downloads\\sqljdbc4-2.0.jar
 includes=**
@@ -42,7 +43,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.sqljdbc4-2.0.jar}:\
     ${libs.jstl.classpath}:\
-    ${file.reference.sqljdbc4-2.0.jar-1}
+    ${file.reference.sqljdbc4-2.0.jar-1}:\
+    ${file.reference.mail-1.4.7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
