--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.activation-1.1.jar=C:\\Users\\ptd\\Downloads\\activation-1.1.jar
 file.reference.gson-2.8.9.jar=C:\\Users\\ptd\\Downloads\\gson-2.8.9.jar
 file.reference.mail-1.4.7.jar=C:\\Users\\ptd\\Downloads\\mail-1.4.7.jar
 file.reference.rest-api-sdk-1.14.0.jar=C:\\Users\\ptd\\Downloads\\rest-api-sdk-1.14.0.jar
@@ -50,7 +51,8 @@ javac.classpath=\
     ${file.reference.mail-1.4.7.jar}:\
     ${file.reference.rest-api-sdk-1.14.0.jar}:\
     ${file.reference.slf4j-api-1.7.32.jar}:\
-    ${file.reference.gson-2.8.9.jar}
+    ${file.reference.gson-2.8.9.jar}:\
+    ${file.reference.activation-1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
